# comfyui-digit

./: README.md  TEST_COVERAGE_ANALYSIS.md  __init__.py  batch_caption_node.py  batch_gemini_image_node.py  caption_find_replace_node.py  caption_viewer_node.py  captioner_node.py  console_doctor_node.py  dataset_node.py  dataset_prep_node.py  drag_crop_node.py  drift_compare.py  drift_gate_node.py  drift_qc_preview_node.py  elevenlabs_config.py  elevenlabs_nodes.py  frame_size_node.py  gcp_config.py  gemini_image_models.py  gemini_image_node.py  image_loader_node.py  image_saver_node.py  llm_node.py  lora_loader_node.py  preset_node.py  projekts_utils.py  prompt_combine_node.py  pyproject.toml  random_prompt_node.py  replicate_seedance_node.py  requirements-training.txt  requirements.txt  shade_nodes.py  srt_from_video_node.py  srt_maker_node.py  text_encode_node.py  trainer_node.py  veo_video_node.py  video_saver_node.py
configs/: default.yaml  flux1_style.yaml  flux1_subject.yaml
scripts/: deploy-gcp-comfyui.sh
training/: __init__.py  captioner.py  config.py  dataset.py  logger.py  lora_trainer.py  presets_db.py  sampler.py
web/: digit_batch_caption.js  digit_batch_gemini_image.js  digit_browse_utils.js  digit_caption_viewer.js  digit_console_doctor.js  digit_dataset_prep.js  digit_drag_crop.js  digit_drift_gate.js  digit_drift_qc_preview.js  digit_gemini_image.js  digit_gemini_image_utils.js  digit_image_loader.js  digit_image_saver.js  digit_lora_loader.js  digit_prompt_combine.js  digit_srt_from_video.js
workflows/: lora_training_pipeline.json
(+16 files in other folders)
