[project]
name = "comfyui-digit"
version = "2.1.4"
description = "DIGIT nodes for ComfyUI — Gemini image generation, Veo video generation, LLM query, and project-based saving. All via Vertex AI directly."
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests",
    "google-auth",
    "google-genai",
    "google-cloud-storage",
    "piexif",
    "opencv-python",
]

[project.urls]
Repository = "https://github.com/thedepartmentofexternalservices/comfyui-digit"

[tool.comfy]
PublisherId = "digit"
DisplayName = "DIGIT Nodes"
