[project]
name = "comfyui-digit"
version = "2.2.0"
description = "DIGIT nodes for ComfyUI — Gemini image/video generation, LLM query, LoRA loading with trigger words, batch captioning, dataset prep, prompt combining, and VFX pipeline saving. All via Vertex AI directly."
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests",
    "google-auth",
    "google-genai",
    "google-cloud-storage",
    "piexif",
    "opencv-python",
]

[project.urls]
Repository = "https://github.com/thedepartmentofexternalservices/comfyui-digit"

[tool.comfy]
PublisherId = "digit"
DisplayName = "DIGIT Nodes"
